tests/reference/asr-implicit_typing3-c82e537.stderr
semantic error: No implicit return type available for `fun`
 --> tests/errors/implicit_typing3.f90:4:9 - 5:24
  |
4 |            function fun()
  |            ^^^^^^^^^^^^^^...
...
  |
5 |            end function fun
  | ...^^^^^^^^^^^^^^^^^^^^^^^^ 
